Subdivision Surface: fix a serious performance hit when mixing CPU & GPU. #104441

Merged
Alexander Gavrilov merged 1 commits from angavrilov/blender:pr-subdiv-gpu-cpu-conflict into main 2023-02-08 10:27:24 +01:00

Subdivision surface efficiency relies on caching pre-computed topology
data for evaluation between frames. However, while eed45d2a23
introduced a second GPU subdiv evaluator type, it still only kept
one slot for caching this runtime data per mesh.

The result is that if the mesh is also needed on CPU, for instance
due to a modifier on a different object (e.g. shrinkwrap), the two
evaluators are used at the same time and fight over the single slot.
This causes the topology data to be discarded and recomputed twice
per frame.

Since avoiding duplicate evaluation is a complex task, this fix
simply adds a second separate cache slot for the GPU data, so that
the cost is simply running subdivision twice, not recomputing topology
twice.

To help diagnostics, I also add a message to show when GPU evaluation
is actually used to the modifier panel. Two frame counters are used
to suppress flicker in the UI panel.

Differential Revision: https://developer.blender.org/D17117

Subdivision surface efficiency relies on caching pre-computed topology data for evaluation between frames. However, while eed45d2a239a introduced a second GPU subdiv evaluator type, it still only kept one slot for caching this runtime data per mesh. The result is that if the mesh is also needed on CPU, for instance due to a modifier on a different object (e.g. shrinkwrap), the two evaluators are used at the same time and fight over the single slot. This causes the topology data to be discarded and recomputed twice per frame. Since avoiding duplicate evaluation is a complex task, this fix simply adds a second separate cache slot for the GPU data, so that the cost is simply running subdivision twice, not recomputing topology twice. To help diagnostics, I also add a message to show when GPU evaluation is actually used to the modifier panel. Two frame counters are used to suppress flicker in the UI panel. Differential Revision: https://developer.blender.org/D17117
Alexander Gavrilov requested review from Campbell Barton 2023-02-07 22:37:15 +01:00
Alexander Gavrilov requested review from Brecht Van Lommel 2023-02-07 22:37:30 +01:00
Alexander Gavrilov force-pushed pr-subdiv-gpu-cpu-conflict from 4b4e8ad190 to bf214a0bdf 2023-02-07 22:41:49 +01:00 Compare
Brecht Van Lommel refused to review 2023-02-07 22:47:02 +01:00
Brecht Van Lommel removed review request for Campbell Barton 2023-02-07 22:47:02 +01:00
Brecht Van Lommel requested review from Kévin Dietrich 2023-02-07 22:47:03 +01:00
Brecht Van Lommel requested review from Campbell Barton 2023-02-07 22:47:26 +01:00
Brecht Van Lommel removed review request for Kévin Dietrich 2023-02-07 22:47:26 +01:00
Brecht Van Lommel removed review request for Campbell Barton 2023-02-07 22:48:49 +01:00
Brecht Van Lommel requested review from Kévin Dietrich 2023-02-07 22:48:49 +01:00

Sorry about that, I'm trying to assign multiple reviewers but it's not letting me, something else to be fixed.

Sorry about that, I'm trying to assign multiple reviewers but it's not letting me, something else to be fixed.

@blender-bot build

@blender-bot build
Member

Build started.

Build started.
Brecht Van Lommel requested changes 2023-02-07 23:09:58 +01:00
@ -418,0 +435,4 @@
if (runtime_data && runtime_data->used_gpu) {
if (runtime_data->used_cpu) {
uiItemL(layout, "Using both CPU and GPU subdivision!", ICON_ERROR);

Leave out the exclamation mark, we should generally not use them in UI text unless it's something really critical.

Leave out the exclamation mark, we should generally not use them in UI text unless it's something really critical.

Also this is not really an error, at most a warning but even then would still go with ICON_INFO.

It's not something users are able to fix in generally, some setup just require it with our current implementation.

Also this is not really an error, at most a warning but even then would still go with ICON_INFO. It's not something users are able to fix in generally, some setup just require it with our current implementation.
angavrilov marked this conversation as resolved
Alexander Gavrilov force-pushed pr-subdiv-gpu-cpu-conflict from bf214a0bdf to d8bb0d329c 2023-02-08 07:59:56 +01:00 Compare
Brecht Van Lommel approved these changes 2023-02-08 09:15:10 +01:00
Kévin Dietrich approved these changes 2023-02-08 10:20:33 +01:00
Alexander Gavrilov merged commit 4d3bfb3f41 into main 2023-02-08 10:27:24 +01:00
Alexander Gavrilov deleted branch pr-subdiv-gpu-cpu-conflict 2023-02-08 10:27:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104441
No description provided.